<resources>
    <string name="app_name">Appatas</string>

    <!-- login -->
    <string name="bienvenido">Bienvenid@</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>

    <string name="facebook_app_id">1048371772028490</string>
    <string name="fb_login_protocol_scheme">fb1048371772028490</string>


    <!--menu-navigation-bat-->
    <string name="home">Inicio</string>
    <string name="localizacion">Localizado</string>
    <string name="find">Te Encontre</string>
    <string name="perfil_mascota">Mi Mascota</string>
    <string name="perfil">Mi Perfil</string>

    <string name="publication">Publicacion: Perdi mi Mascota</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <!--home-->

    <!--publicacion-->
    <string name="nombre_usuario">Usuario:</string>
    <string name="hora">Hora:</string>
    <string name="fecha">Fecha:</string>
    <string name="nombre_mascota">Mascota:</string>
    <string name="raza">Raza:</string>
    <string name="color">Color:</string>
    <string name="tamanio">Tamaño:</string>
    <string name="aditamentos">Aditamentos:</string>
    <string name="donde">Donde</string>
    <string name="observaciones">Observaciones:</string>
    <string name="enfermedades">Enfermedades:</string>
    <string name="recompensa">Recompensa:</string>



    <!--encontrados-->

</resources>
