<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme"
        android:fitsSystemWindows="false">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="@string/publication"
            android:theme="@style/ThemeOverlay.AppCompat.Dark" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/margin_popup"
            android:paddingLeft="@dimen/margin_popup"
            android:paddingRight="@dimen/margin_popup"
            android:paddingTop="@dimen/margin_popup">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etId"
                    android:hint="@string/publication"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilhora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ethora"
                    android:hint="@string/hora"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etUbicacion"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:hint="@string/fecha"
                    android:layout_height="wrap_content" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilMascota"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/etOficina"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:hint="@string/nombre_mascota"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>
            </android.support.design.widget.TextInputLayout>

            <AutoCompleteTextView
                android:hint="@string/donde"
                android:id="@+id/spinnerResponsible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilAditamentos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etCargo"
                    android:layout_width="match_parent"
                    android:hint="@string/aditamentos"
                    android:singleLine="true"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilObservacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etArea"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:hint="@string/observaciones"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilEnfermedades"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etAmbiente"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:hint="@string/enfermedades"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>


            <CheckBox
                android:id="@+id/checkPendiente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recompensa" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilRecompensa"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etObservation"
                    android:hint="0.00 S/."
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_popup"
                android:textSize="@dimen/text_size_titulo"
                android:text="Imagenes:"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>